Finalizando as configurações trabalhando com POO estilizando as páginas criando servidor local com node js disponibilizando no github.

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,2 @@
 <p>Welcome!</p>
+<p>Clique em algum link para visualizar a transição de páginas sem a necessidade de receber todo o html e apenas os dados requisitados por você</p>
