--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css">
     <title>SPA</title>
 </head>
 <body>
@@ -15,6 +16,6 @@
     <div class="app">
         
     </div>
-    <script src="src/index.js"></script>
+    <script src="src/index.js" type="module"></script>
 </body>
 </html>
